# ipl-data-platform

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ci.yml  security.yaml
analytics/duckdb/: batting_score_card.py  bowling_score_card.py  player_season_stats.py  team_match_summary.py
ingestion/bronze/: ingestion.py  registry.py  transformer.py
src/ipl/analytics/duckdb/: bowling_score_card.py
src/ipl/ingestion/bronze/: ingestion.py
src/ipl/transformation/gold/: transformer.py
tests/: conftest.py
tests/ingestion/: test_ingestion_registry.py
transformation/gold/: transformer.py
transformation/silver/: transformer.py
utilities/: cleanup.py
visualisation/: fixture_ticker.py
visualisation/temp_data/: ipl_2026_schedule.csv  last_2_years.csv
