[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ipl-data-platform"
version = "0.1.0"
description = "IPL Data Engineering and Analytics Platform"
requires-python = ">=3.13"
dependencies = [
    "pyspark==4.0.0",
    "duckdb>=0.10.0",
    "pandas>=2.2.0",
    "pyreadr>=0.5.0",
    "streamlit>=1.35.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.4.4",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
exclude = ["venv", ".git", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting — bonus, replaces isort too)
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.bandit]
exclude_dirs = ["venv", "tests"]
skips = [
    "B101",  # assert statements — fine in tests
    "B603",  # subprocess — we don't use it but PySpark internals trigger it
]